--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents" class="bg-white dark:bg-black text-black dark:text-white">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="bg-neutral-200 dark:bg-neutral-800 text-black dark:text-white">
+		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
